[tool.poetry]
name = "demoqa_testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.1"
pytest = "^8.0.2"
fake-useragent = "^1.4.0"
setuptools = "^69.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
